--- a/api.ipynb
+++ b/api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,24 @@
     "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#API key\n",
-    "api_key = \"RGAPI-60b42ec8-92d6-4081-89a3-200cc18cb78a\"\n",
+    "api_key = \"RGAPI-73eb964c-cf9a-494b-81f6-6c5141c32883\"\n",
     "gameName = \"Slylio\" #username\n",
     "tagLine = \"EUW\" #suffixe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,119 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EUW1_6830408285\n",
-      "EUW1_6830353221\n",
-      "EUW1_6830091371\n",
-      "EUW1_6830045852\n",
-      "EUW1_6829650766\n",
-      "EUW1_6829189664\n",
-      "EUW1_6829137720\n",
-      "EUW1_6829091488\n",
-      "EUW1_6828547486\n",
-      "EUW1_6828468759\n",
-      "EUW1_6826787684\n",
-      "EUW1_6826741768\n",
-      "EUW1_6825636753\n",
-      "EUW1_6825583849\n",
-      "EUW1_6825553473\n",
-      "EUW1_6825512517\n",
-      "EUW1_6825476622\n",
-      "EUW1_6824433146\n",
-      "EUW1_6824360960\n",
-      "EUW1_6821265424\n",
-      "EUW1_6821205029\n",
-      "EUW1_6820269222\n",
-      "EUW1_6818243881\n",
-      "EUW1_6817876234\n",
-      "EUW1_6817832257\n",
-      "EUW1_6817791170\n",
-      "EUW1_6817751054\n",
-      "EUW1_6817736140\n",
-      "EUW1_6817704800\n",
-      "EUW1_6817685454\n",
-      "EUW1_6817654890\n",
-      "EUW1_6815607325\n",
-      "EUW1_6815553132\n",
-      "EUW1_6815479868\n",
-      "EUW1_6815289763\n",
-      "EUW1_6812960275\n",
-      "EUW1_6812875294\n",
-      "EUW1_6812354586\n",
-      "EUW1_6812293142\n",
-      "EUW1_6811843539\n",
-      "EUW1_6811458138\n",
-      "EUW1_6811299367\n",
-      "EUW1_6811222638\n",
-      "EUW1_6811145183\n",
-      "EUW1_6811043250\n",
-      "EUW1_6810576771\n",
-      "EUW1_6810500015\n",
-      "EUW1_6810454151\n",
-      "EUW1_6810428685\n",
-      "EUW1_6810381611\n",
-      "EUW1_6810332488\n",
-      "EUW1_6809166946\n",
-      "EUW1_6809121562\n",
-      "EUW1_6809065459\n",
-      "EUW1_6809010656\n",
-      "EUW1_6808971494\n",
-      "EUW1_6808883359\n",
-      "EUW1_6807083610\n",
-      "EUW1_6806773383\n",
-      "EUW1_6806756569\n",
-      "EUW1_6806724421\n",
-      "EUW1_6804965509\n",
-      "EUW1_6804928364\n",
-      "EUW1_6804870437\n",
-      "EUW1_6804600280\n",
-      "EUW1_6804550654\n",
-      "EUW1_6804431967\n",
-      "EUW1_6804365509\n",
-      "EUW1_6803311273\n",
-      "EUW1_6803220822\n",
-      "EUW1_6802892092\n",
-      "EUW1_6801977330\n",
-      "EUW1_6801903895\n",
-      "EUW1_6800626130\n",
-      "EUW1_6800548623\n",
-      "EUW1_6799943321\n",
-      "EUW1_6799888484\n",
-      "EUW1_6799825678\n",
-      "EUW1_6799019267\n",
-      "EUW1_6798949272\n",
-      "EUW1_6798899609\n",
-      "EUW1_6798849689\n",
-      "EUW1_6798305503\n",
-      "EUW1_6798252580\n",
-      "EUW1_6798172266\n",
-      "EUW1_6798132786\n",
-      "EUW1_6797923414\n",
-      "EUW1_6797881695\n",
-      "EUW1_6797318766\n",
-      "EUW1_6795923987\n",
-      "EUW1_6795892976\n",
-      "EUW1_6795852812\n",
-      "EUW1_6795779337\n",
-      "EUW1_6795699696\n",
-      "EUW1_6795606284\n",
-      "EUW1_6794935334\n",
-      "EUW1_6794902979\n",
-      "EUW1_6794373144\n",
-      "EUW1_6794310703\n",
-      "EUW1_6794224928\n"
+      "EUW1_6835115969\n",
+      "EUW1_6835054292\n"
      ]
     }
    ],
    "source": [
     "#Match history from PUUID \n",
-    "nb_of_games = 100\n",
+    "nb_of_games = 2\n",
     "games = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids?type=ranked&start=0&count={nb_of_games}&api_key={api_key}\")\n",
     "for game in games.json():\n",
     "    print(game)"
@@ -170,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Match n° 100 / 100 \r"
+      "Match n° 2 / 2 \r"
      ]
     }
    ],
@@ -187,17 +89,17 @@
     "matchs_data=[]\n",
     "data = pd.DataFrame()\n",
     "cout=0\n",
-    "for match in matchs:\n",
+    "for matchId in matchs:\n",
     "    cout+=1\n",
     "    print(\"Match n°\",cout,\"/\",nb_of_games,\"\\r\",end=\"\")\n",
-    "    match_data = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/{match}?api_key={api_key}\")\n",
+    "    match_data = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/{matchId}?api_key={api_key}\")\n",
     "    matchs_data.append(match_data.json())\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,25 +136,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_match_info_by_matchId(match_ids, api_key):\n",
+    "\n",
+    "    matchid_info_list = [] # List that will store the dataframes generated, for each match id in the for loop \n",
+    "\n",
+    "    for i in range(len(match_ids)):# len() get the numbers of rows of the match_ids parameter inserted. Then we use the range() function to create a sequence of number starting from 0 to number returned by len(). \n",
+    "                            # With that we can interate trough each line in the match_ids dataframe (our function parameter) using the iloc function to get the matchid.\n",
+    "\n",
+    "        api_ulr = 'https://europe.api.riotgames.com/lol/match/v5/matches/{}?api_key={}'.format(match_ids['matchid'].iloc[i], api_key) # here we use the iloc function as explained above to form the api link for each matchid\n",
+    "        resp = requests.get(api_ulr) # Sending a get request to the api_url\n",
+    "        print(resp.status_code) # Printing the status_code of the request\n",
+    "\n",
+    "        if resp.status_code == 200: # Here we need to use if statment, because of the riot API rate limit which is 20 requests every 1 sec and 100 requests every 2 minutes. A 200 status_code means that the request was successful so it can move on.\n",
+    "            pass                        \n",
+    "        elif resp.status_code == 429: # A 429 means that we have exceeded the rate limit. To solve that we need to wait and then try again to get a successful request\n",
+    "            while True: # To do taht we use a while true loop, to execute the if, elif statment repeatdly until the status_code is 200. After that we use break statement to come out of this loop.\n",
+    "                if resp.status_code == 429: \n",
+    "                    print('429 delay try 10 second') #approximate 110 second wait to work\n",
+    "                    time.sleep(10) # Sleep\n",
+    "\n",
+    "                    api_url = 'https://europe.api.riotgames.com/lol/match/v5/matches/{}?api_key={}'.format(match_ids['matchid'].iloc[i], api_key) # Trying the request again\n",
+    "                    resp = requests.get(api_url)\n",
+    "                    print(resp.status_code)\n",
+    "\n",
+    "                elif resp.status_code == 200:\n",
+    "                    print('limit cost resolve')\n",
+    "                    break        \n",
+    "\n",
+    "        # Same process we did in the beginning             \n",
+    "        matchid_info = pd.json_normalize(resp.json()['info']['participants'])\n",
+    "        matchid_info_list.append(matchid_info) # Merging all the dataframes generated and then stored in the matchid_info_list with the concat() function\n",
+    "        \n",
+    "    matchid_info_df = pd.concat(matchid_info_list)\n",
+    "\n",
+    "    return matchid_info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "429\n",
-      "429 delay try 100 second\n",
-      "429\n",
-      "429 delay try 100 second\n",
-      "429\n",
-      "429 delay try 100 second\n"
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n"
      ]
     }
    ],
    "source": [
-    "df = get_matchids_by_puuid(puuid, 100, api_key)\n",
-    "df"
+    "matchsid = get_matchids_by_puuid(puuid, 10, api_key)\n",
+    "matchid_info_df= get_match_info_by_matchId(matchsid, api_key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'matchid_info_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmatchid_info_df\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'matchid_info_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "matchid_info_df"
    ]
   },
   {
