timestamp data parse

--- a/api_process.ipynb
+++ b/api_process.ipynb
@@ -12751,6 +12751,44 @@
    "source": [
     "df_matchs_info1[:1000].to_csv('matchs_info1-light.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end =pd.DataFrame(pd.json_normalize(pd.json_normalize(resp.json()['info']['frames'])[\"events\"][len(pd.DataFrame(pd.json_normalize(pd.json_normalize(resp.json()['info']['frames'])[\"events\"])))-1])).tail(1)[[\"type\", \"winningTeam\"]]\n",
+    "#to do assert\n",
+    "end[\"winningTeam\"] = int((end[\"winningTeam\"]-100)/100)\n",
+    "end = pd.DataFrame(end.reset_index()[\"winningTeam\"])\n",
+    "match_data_info_frames = pd.json_normalize(resp.json()['info']['frames'])\n",
+    "match_data_event= match_data_info_frames[\"events\"]\n",
+    "match_data_stats = match_data_info_frames.drop([\"events\"], axis=1)\n",
+    "\n",
+    "\n",
+    "match_data_stats.columns = match_data_stats.columns.str.removeprefix('participantFrames.')\n",
+    "for i in range(11):\n",
+    "    match_data_stats.columns = match_data_stats.columns.str.removeprefix(str(i) + \".\")\n",
+    "\n",
+    "team1_stats = match_data_stats.iloc[:, 1:241]\n",
+    "team2_stats = match_data_stats.iloc[:, 241:]\n",
+    "team1_stats = team1_stats.groupby(team1_stats.columns, axis=1).sum()\n",
+    "team1_stats = team1_stats.add_prefix(\"Team1.\")\n",
+    "team2_stats = team2_stats.groupby(team2_stats.columns, axis=1).sum()\n",
+    "team2_stats = team2_stats.add_prefix(\"Team2.\")\n",
+    "\n",
+    "match_data_stats_teams = pd.concat([team1_stats, team2_stats], axis=1) \n",
+    "match_data_stats_teams.drop(29, axis=0)\n",
+    "match_data_stats_teams = match_data_stats_teams\n",
+    "if len(match_data_stats_teams) < 16:\n",
+    "    match_data_stats_teams = None\n",
+    "match_data_stats_teams = match_data_stats_teams.head(16)\n",
+    "match_data_stats_teams_15 = pd.DataFrame(match_data_stats_teams.loc[15]).transpose().reset_index().drop([\"index\"], axis=1)\n",
+    "pd.concat([match_data_stats_teams_15, end], axis=0)\n",
+    "\n",
+    "#if len(match_data_stats_teams) < 16: vire"
+   ]
   }
  ],
  "metadata": {
@@ -12769,7 +12807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
