--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "matchs_info_df1 = pd.read_csv('data_15min.csv') #import of dataset created by api_process.ipynb\n",
     "matchs_info_df2 = pd.read_csv('data_15min2.csv') #import of dataset created by api_process.ipynb\n",
-    "matchs_info_df = pd.concat([matchs_info_df1, matchs_info_df2], ignore_index=True) #concatenation of the two datasets"
+    "matchs_info_df = pd.concat([matchs_info_df1, matchs_info_df2], ignore_index=True) #concatenation of the two datasetss"
    ]
   },
   {
