Mise au propre api process

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -41,14 +41,14 @@
     "\n",
     "Nous avons séparé tout le processus de requêtes api dans le fichier api_process. Ce fichier contiendra le code en rapport direct avec les jalons et le rendu final du projet.\n",
     "\n",
-    "# Update jalon 2 : \n",
+    "# Update depuis le jalon 2 : \n",
     "Même si nous en avions l'intuition, prédire l'issue d'une partie en prenant ses caractéristiques à l'instant final de la partie était trop simple (environ 1 d'accuracy dès la régression logistique en cross validation).\n",
     "\n",
-    "On revoit donc tout le data set pour prendre des informations à un instant t (exemple ici : 15 minutes) de la partie pour en prédire son issue. On aura donc des résultats plus pertinents avec une vraie utilité avec un peu plus de challenge\n",
+    "On revoit donc tout le dataset pour prendre des informations à un instant t (exemple ici : 15 minutes) de la partie pour en prédire son issue. On aura donc des résultats plus pertinents avec une vraie utilité avec un peu plus de challenge.\n",
     "\n",
     "Le processus de récolte de données, de filtrage des parties de moins de 15 minutes etc.. est disponible dans le notebook api_processs. \n",
     "\n",
-    "On a gardé une trace de nos anciennes accuracys dans le fichier accuracy_with_single_feature.txt .\n",
+    "On a gardé une trace de nos anciennes accuracys dans le fichier accuracy_with_single_feature.txt.\n",
     "\n"
    ]
   },
@@ -1672,31 +1672,31 @@
    "source": [
     "Nous voulons faire une régression logistique pénalisée.\n",
     "\n",
-    "Ce choix se justifie car nous cherchons a predire une variable qualitative binaire.\n",
+    "Ce choix se justifie car nous cherchons à prédire une variable qualitative binaire.\n",
     "\n",
-    "Pour les hyperparametres, nous allons utiliser une gridSearch pour selectionner les meilleurs hyperparametres.\n",
+    "Pour les hyperparamètres, nous allons utiliser une gridSearchCV pour selectionner les meilleurs hyperparamètres.\n",
     "\n",
     "Ceux-ci sont:\n",
     "\n",
-    "-la penalite\n",
+    "    -la pénalité\n",
     "\n",
-    "-l'inverse de la force de regularisation, C\n",
+    "    -l'inverse de la force de régularisation, C\n",
     "\n",
-    "-le nombre d'iterations maximal\n",
+    "    -le nombre d'itérations maximal\n",
     "\n",
-    "-le ratio entre l1 et l2 pour l'elasticNet\n",
+    "    -le ratio entre l1 et l2 pour l'elasticNet\n",
     "\n",
-    "Nous n'utilisons pas un randomSearch pour les hyperparametres car il n'y a pas tant de valeurs a tester.\n",
+    "Nous n'utilisons pas un randomSearch pour les hyperparamètres car il n'y a pas tant de valeurs à tester.\n",
     "\n",
-    "Pour ajuster nos hyperparametres, nous utilisons plusieurs cross-validations:\n",
+    "Pour ajuster nos hyperparamètres, nous utilisons plusieurs cross-validations:\n",
     "\n",
-    "-Une, en interne, pour la selection des hyperparametres\n",
+    "    -Une, en interne, pour la sélection des hyperparamètres\n",
     "\n",
-    "-Une, en externe, pour l'evaluation de la generalisation de notre model\n",
+    "    -Une, en externe, pour l'évaluation de la généralisation de notre modèle\n",
     "\n",
-    "On compare donc par cross-validation la generalisation de plusieurs hyperparametres, eux-meme selectionnes par cross-validation.\n",
+    "On compare donc par cross-validation la geénéralisation de plusieurs hyperparamètres, eux-meme sélectionnés par cross-validation.\n",
     "\n",
-    "Pour cela, on a separe nos donnees plusieurs fois en train, validation et test set."
+    "Pour cela, on a séparé nos données plusieurs fois en train, validation et test set."
    ]
   },
   {
@@ -2180,7 +2180,7 @@
    "source": [
     "#Split the dataset into training and testing sets\n",
     "from sklearn.model_selection import train_test_split\n",
-    "x_train, x_test, y_train, y_test = train_test_split(data, target, test_size=0.3, random_state=42)"
+    "x_train, x_test, y_train, y_test = train_test_split(data, target, test_size=0.3, random_state=42) #70% training, 30% testing"
    ]
   },
   {
@@ -2195,14 +2195,13 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# Création du pipeline avec StandardScaler et Logistic Regression\n",
-    "pip = make_pipeline(StandardScaler(), LogisticRegression())\n",
+    "pip = make_pipeline(StandardScaler(), LogisticRegression()) #Create a pipeline with a standard scaler and a logistic regression\n",
     "\n",
     "# Définition des paramètres à rechercher\n",
     "parameters = {'logisticregression__penalty': ['l1', 'l2', 'elasticnet', 'none'], #l1 pour Lasso, l2 pour Ridge\n",
     "              'logisticregression__l1_ratio': [0.1, 0.5, 0.9],  #Ratio de mélange de la régularisation (0 = l2, 1 = l1)\n",
-    "              'logisticregression__C': [0.1, 1, 10, 100, 1000],\n",
-    "              'logisticregression__max_iter' : [10, 100, 1000, 2500, 5000]}  # Valeurs de régularisation\n",
+    "              'logisticregression__C': [0.1, 1, 10, 100, 1000], #Inverse de la force de régularisation\n",
+    "              'logisticregression__max_iter' : [10, 100, 1000, 2500, 5000]}  #Nombre d'itérations maximales\n",
     "\n",
     "grid_search = GridSearchCV(pip, param_grid=parameters, scoring='accuracy', cv=5, n_jobs=-1)\n",
     "\n"
@@ -2215,7 +2214,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_validate\n",
-    "cv_results = cross_validate(\n",
+    "cv_results = cross_validate( #Cross validation\n",
     "    grid_search, data, target, cv=5, n_jobs=-1, return_estimator=True\n",
     ")"
    ]
@@ -2243,7 +2242,7 @@
     }
    ],
    "source": [
-    "for cv_fold, estimator_in_fold in enumerate(cv_results[\"estimator\"]):\n",
+    "for cv_fold, estimator_in_fold in enumerate(cv_results[\"estimator\"]): #Display the best hyperparameters for each fold\n",
     "    print(\n",
     "        f\"Best hyperparameters for fold #{cv_fold + 1}:\\n\"\n",
     "        f\"{estimator_in_fold.best_params_}\"\n",
@@ -2254,18 +2253,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On vois que le meilleur choix de penalite est la penalite Lasso (l2).\n",
+    "On voit que le meilleur choix de pénalité est la pénalité Lasso (l2).\n",
     "\n",
-    "Aussi, on selectionne des valeures basses pour C et le nombre max d'iterations.\n",
+    "Aussi, on sélectionne des valeurs basses pour C et le nombre max d'itérations.\n",
     "\n",
-    "On peut ignorer l1_ratio car la penalite elasticNet n'est pas la meilleure"
+    "On peut ignorer l1_ratio car la pénalité elasticNet n'est pas la meilleure."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performances sur le jeu de donnees test"
+    "# Performances sur le jeu de données test"
    ]
   },
   {
@@ -2318,7 +2317,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On voit avec notre model generalise bien car la variance est faible.\n"
+    "On voit avec notre modèle généralise bien car la variance est faible.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On conclut donc de cela qu'avec une régression logistique un peu tunée on arrive à prédire l'issue de ~ 77,2% des parties en ayant les informations à 15 minutes.  "
    ]
   }
  ],
