--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2324,7 +2324,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On conclut donc de cela qu'avec une régression logistique un peu tunée on arrive à prédire l'issue de ~ 77,2% des parties en ayant les informations à 15 minutes.  "
+    "# Conclusion jalon 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On conclut donc de cela qu'avec une régression logistique un peu tunée on arrive à prédire l'issue de ~ 77,2% des parties en ayant les informations à 15 minutes de jeu. "
    ]
   }
  ],
