commentaires si on avait 3 mois

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -18033,6 +18033,39 @@
     "\n",
     "On voit que la régression logistique prédit bien plus vite que les deux autres modèles donc si l'entreprise doit prédire sur un grand volume de données et fréquemment, alors on conseillerait celle-ci.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Si on avait 3 mois de plus..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Au niveau du dataset :\n",
+    "\n",
+    "- **Enrichissement en statistiques brutes** :\n",
+    "    - Ajouter les champions, les rôles, etc. Cela permettrait de voir des synergies, des contres et potentiellement améliorer les prédictions.\n",
+    "    - Il faudra retirer les personnages très peu joués et effectuer un encodage one hot, ce qui nous ajouterait environ 150 * 10 colonnes à notre dataset : reste à voir si cela en vaut la peine.\n",
+    "\n",
+    "- **Enrichissement en statistiques 'externes'** :\n",
+    "    - Inclure le taux de victoire des autres joueurs de la partie ainsi que le taux de victoire des champions de la partie sur la mise à jour actuelle.\n",
+    "\n",
+    "- Actuellement, on traite les données à l'instant T = 15 min. On pourrait prendre d'autres timers pour affiner les prédictions. Il ne faut pas prendre trop tard, car comme on l'a vu au début de notre projet, League of Legends est un jeu à effet boule de neige et on monte vite vers les 100% de bonnes réponses.\n",
+    "\n",
+    "### Au niveau de l'apprentissage :\n",
+    "\n",
+    "- Regarder les features interaction : cela nous permettrait de mieux comprendre les relations entre nos features. On est en plus sûr d'en avoir ici : l'xp donne des statistiques, tout comme les golds (ce n'est pas pour rien que ce sont les deux variables les plus importantes selon la MDA).\n",
+    "\n",
+    "- Ajouter des données à d'autres timestamps de partie : on pourrait potentiellement créer des features = différence de stats entre les moments (ex : différence de gold entre 10 et 10 minutes pour voir l'accélération de la partie).\n",
+    "\n",
+    "- Mieux généraliser les tests en bouclant / nested grid search, etc.\n",
+    "\n",
+    "- Il y a d'autres modèles de classification (SVM, KNN, Naive Bayes etc..) qu'on n'a pas pu tester.\n"
+   ]
   }
  ],
  "metadata": {
