commentaire du start

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -16466,7 +16466,7 @@
    "source": [
     "# Impact de la selection de variables sur les performances:\n",
     "\n",
-    "On voit qu'en selectionnant les variables explicatives les plus importantes, on garde de bonne performances sur notre jeu de donnees test."
+    "On voit qu'en sélectionnant les variables explicatives les plus importantes, on garde de bonne performances sur notre jeu de données test."
    ]
   },
   {
@@ -16481,7 +16481,18 @@
    "metadata": {},
    "source": [
     "On va utiliser un Gradient Boosting Classifier.\n",
-    "On n'utilise pas la version avec les histogrammes car le temps de calcul n'est pas un probleme."
+    "\n",
+    "Cet algorithme créer de façon séquentielle des arbres de décisions.\n",
+    "\n",
+    "Chacun de ces arbres est peu profond et va sous-apprendre les donées.\n",
+    "\n",
+    "De plus, chaque arbres créés va prédire l'erreur (négative) des modèles précédents ce qui va corriger le sous-apprentissage du modèle d'ensemble.\n",
+    "\n",
+    "On peut l'utiliser dans notre cas car nous avant moins de 10000 matchs dans notre jeu de données.\n",
+    "\n",
+    "On n'utilise pas la version avec les histogrammes car le temps de calcul n'est pas un problème.\n",
+    "\n",
+    "Les principaux hyper-paramètres sont n_estimators;;"
    ]
   },
   {
@@ -17181,13 +17192,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "C'est big. Max depth avait dit 5 avant donc c'est bien autour de 5/7 le best param"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -17211,8 +17215,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On precise les hyperparametres avec plus de cross validation.\n",
-    "On confirme aussi le sub sample et n_estimators"
+    "On precise les hyperparametres.\n",
+    "On confirme notamment le sub sample et n_estimators."
    ]
   },
   {
@@ -17735,7 +17739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On est donc assez confiant en notre calibrage d'hyperparametreset on peut faire une premiere evaluation sur notre jeu de donnees test."
+    "On est donc assez confiant en notre calibrage d'hyperparamètres et on peut faire une première évaluation sur notre jeu de données test."
    ]
   },
   {
@@ -17761,7 +17765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut ensuite faire l'importance des features:"
+    "On peut ensuite faire l'importance des features pour retirer celle qui pourraient pertuber l'apprentissage:"
    ]
   },
   {
@@ -17803,7 +17807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On enleve les 20 variables explicatives les moins importantes pour que notre model ne se base pas dessus durant l'apprentissage."
+    "On enlève les 20 variables explicatives les moins importantes pour que notre modèle ne se base pas dessus durant l'apprentissage."
    ]
   },
   {
