--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -16492,7 +16492,7 @@
     "\n",
     "On n'utilise pas la version avec les histogrammes car le temps de calcul n'est pas un problème.\n",
     "\n",
-    "Les principaux hyper-paramètres sont n_estimators;;"
+    "Les principaux hyper-paramètres sont n_estimators, learning_rate, max_depth, subsample , max_features."
    ]
   },
   {
