commentaires du start

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -16492,7 +16492,15 @@
     "\n",
     "On n'utilise pas la version avec les histogrammes car le temps de calcul n'est pas un problème.\n",
     "\n",
-    "Les principaux hyper-paramètres sont n_estimators, learning_rate, max_depth, subsample , max_features."
+    "Les principaux hyper-paramètres sont n_estimators, learning_rate, max_depth, subsample , max_features.\n",
+    "\n",
+    "-n_estimators: le nombre d'arbres dans notre ensemble.\n",
+    "\n",
+    "-learning_rate: gère la contribution de chaque arbres dans l'ensemble.\n",
+    "\n",
+    "-subsample: la fraction des données à prendre en compte pour l'apprentissage de chaque arbres.\n",
+    "\n",
+    "-max_features: le nombre de variables considérées lors de chaque coupure."
    ]
   },
   {
@@ -18035,7 +18043,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "On voit que la régression logistique prédit bien plus vite que les deux autres modèles donc si l'entreprise doit prédire sur un grand volume de données et fréquemment, alors on conseillerait celle-ci.\n"
+    "On voit que la régression logistique prédit bien plus vite que les deux autres modèles donc si l'entreprise doit prédire sur un grand volume de données et fréquemment, alors on conseillerait celle-ci.\n",
+    "\n",
+    "On notera tout de même que le gradient boosting est plus rapide que la forêt aléatoire; cela s'explique par le fait que prédire avec un arbre peu profond est plus rapide que de prédire avec un arbres profond.\n"
    ]
   },
   {
